--- a/src/components/Menuver/Menuver.module.css
+++ b/src/components/Menuver/Menuver.module.css
@@ -1,19 +1,43 @@
-.box {
+*{
+  padding: 0;
+  margin: 0;
+}
+
+.menu{
+  height: 100vh;
+  background-color: #34495E;
+}
+
+.menu ul{
   list-style: none;
-  text-align: center;
-  background-color:rgb(255, 255, 255);
-  font-size: 22px;
-  font-weight: 600;
-  padding: 15px 10px;
-  color: black;
-  margin: auto;
+  margin: 0;
+  padding: 0;
 }
 
-.box a {
-  text-decoration:none;
+.menu ul li{
+  padding: 15px;
+  position: relative;
+  width: 200px;
+  vertical-align: middle;
+  background-color: #34495E;
+  border-top: 1px solid #BDC3C7;
 }
 
-.wrapper {
-  background-color:aliceblue;
-  width: 250px;
+.menu ul ul{
+  transition: all 0.3s;
+  opacity: 0;
+  position: absolute;
+  visibility: hidden;
+  left: 99%;
+  top: -2%;
+}
+
+.menu ul li:hover > ul{
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu ul li a{
+  color: #fff;
+  text-decoration: none;
 }
